# sdk

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  dev.ipynb  pytest.ini  requirements.txt
impl/binance/: README.md  pyproject.toml
impl/binance/src/binance_sdk/: core.py
impl/binance/src/binance_sdk/earn/: instruments.py
impl/binance/src/binance_sdk/wallet/: __init__.py  deposit_methods.py  withdrawal_methods.py
impl/binance/src/tribulnation/binance/: __init__.py  core.py
impl/bingx/: README.md  pyproject.toml
impl/bingx/src/bingx_sdk/: __init__.py  core.py
impl/bingx/src/bingx_sdk/earn/: __init__.py  instruments.py
impl/bingx/src/bingx_sdk/wallet/: deposit_methods.py  withdrawal_methods.py
impl/bit2me/: Justfile  README.md  pyproject.toml
impl/bit2me/src/bit2me_sdk/core/: exc.py
impl/bit2me/src/bit2me_sdk/report/: snapshots.py
impl/bitget/: README.md  pyproject.toml
impl/bitget/src/bitget_sdk/: __init__.py  __init__.pyi  core.py
impl/bitget/src/bitget_sdk/earn/: instruments.py
impl/bitget/src/bitget_sdk/reporting/: __init__.py  snapshots.py
impl/bitget/src/bitget_sdk/wallet/: __init__.py  deposit_methods.py  withdrawal_methods.py
impl/bitget/src/tribulnation/bitget/: __init__.py  core.py
impl/bybit/: README.md  pyproject.toml
impl/bybit/src/bybit_sdk/: __init__.py  core.py
impl/bybit/src/bybit_sdk/earn/: instruments.py
impl/bybit/src/tribulnation/bybit/: __init__.py  core.py
impl/dydx/: README.md  pyproject.toml
impl/dydx/docs/: reporting.md
impl/dydx/src/dydx_sdk/: __init__.py
impl/dydx/src/dydx_sdk/core/: __init__.pyi  exc.py  exceptions.py  mixins.py  naming.py  util.py
impl/dydx/src/dydx_sdk/market/: __init__.py  __init__.pyi  exchange.py  market.py  venue.py
impl/dydx/src/dydx_sdk/market_v2/: __init__.py
impl/dydx/src/dydx_sdk/report/: __init__.py  snapshots.py
impl/dydx/src/tribulnation/dydx/: __init__.py
impl/ethereum/: README.md  pyproject.toml
impl/ethereum/docs/: reporting.md
impl/ethereum/src/ethereum_sdk/: __init__.py
impl/ethereum/src/ethereum_sdk/core/: __init__.py  __init__.pyi  etherscan.py  mixin.py  rpc.py  util.py  validation.py
impl/ethereum/src/ethereum_sdk/reporting/: __init__.py  alchemy.py  etherscan.py  history.py  snapshots.py
impl/hyperliquid/: README.md  pyproject.toml
impl/hyperliquid/src/hyperliquid_sdk/: __init__.py  __init__.pyi
impl/hyperliquid/src/hyperliquid_sdk/core/: __init__.py  constants.py  exc.py  mixin.py
impl/hyperliquid/src/hyperliquid_sdk/market/: __init__.py  perps_exchange.py  perps_market.py  spot_exchange.py  spot_market.py  venue.py
impl/hyperliquid/src/hyperliquid_sdk/perps/: __init__.py  core.py
impl/hyperliquid/src/hyperliquid_sdk/report/: snapshots.py
impl/hyperliquid/src/hyperliquid_sdk/spot/: __init__.py
impl/hyperliquid/src/tribulnation/hyperliquid/: __init__.pyi
impl/kraken/: README.md  pyproject.toml
impl/kraken/src/kraken_sdk/: __init__.py  core.py
impl/kraken/src/kraken_sdk/earn/: instruments.py
impl/kraken/src/kraken_sdk/wallet/: __init__.py  deposit_methods.py  withdrawal_methods.py
impl/kraken/src/tribulnation/kraken/: core.py
impl/mexc/: README.md  pyproject.toml
impl/mexc/src/mexc_sdk/: __init__.py
impl/mexc/src/mexc_sdk/core/: __init__.pyi  exc.py  mixin.py
impl/mexc/src/mexc_sdk/earn/: __init__.py  _financial_products.py  instruments.py
impl/mexc/src/mexc_sdk/futures/: __init__.py
impl/mexc/src/mexc_sdk/market/: __init__.py  spot_exchange.py  spot_market.py  venue.py
impl/mexc/src/mexc_sdk/reporting/: __init__.pyi  snapshots.py
impl/mexc/src/mexc_sdk/spot/: __init__.py
impl/mexc/src/mexc_sdk/spot_v2/: __init__.py
impl/mexc/src/mexc_sdk/wallet/: __init__.py  _deposit_history.py  _withdrawal_history.py  deposit_methods.py  withdrawal_methods.py
impl/mexc/src/tribulnation/mexc/: __init__.py
python/: Justfile  pyproject.toml
python/src/trading_sdk/: __init__.pyi  market_data.py  trading.py  user_data.py  wallet.py
rust/: Cargo.toml  README.md
rust/src/: errors.rs  lib.rs  market_data.rs  trading.rs  types.rs  wallet.rs
sdk/: Justfile  README.md  pyproject.toml
sdk/src/sdk/: __init__.pyi
sdk/src/sdk/core/: __init__.py  misc.py  networks.py  sdk.py  util.py
sdk/src/sdk/earn/: instruments.py
sdk/src/sdk/market/market_data/: candles.py  depth.py  funding_rate_history.py  info.py  trades.py
sdk/src/sdk/market/market_streams/: depth.py  trades.py
sdk/src/sdk/market/trading/: cancel_order.py  place_order.py  query_order.py
sdk/src/sdk/market/types/: order.py
sdk/src/sdk/market/user_data/: balances.py  my_funding_history.py  my_trades.py
sdk/src/sdk/market/user_streams/: my_trades.py
sdk/src/sdk/reporting/transactions/: matching.py  sdk.py
sdk/src/sdk/wallet/: deposit_methods.py  withdraw.py  withdrawal_methods.py
sdk/src/trading_sdk/: __init__.pyi  errors.py  trading.py  types.py  util.py  wallet.py
sdk/src/trading_sdk/core/: __init__.py  __init__.pyi  exc.py  misc.py  paging.py  sdk.py  stream.py  util.py
sdk/src/trading_sdk/earn/: __init__.pyi  _earn.py  redeem.py  reward_history.py  subscribe.py
sdk/src/trading_sdk/futures/: __init__.pyi  _futures.py
sdk/src/trading_sdk/futures/market_data/: __init__.pyi  _market_data.py
sdk/src/trading_sdk/futures/market_streams/: _streams.py  depth.py
sdk/src/trading_sdk/impl/: market.py
sdk/src/trading_sdk/market/: __init__.py  __init__.pyi  _market.py  exchange.py  impl.py  load.py  market.py  markets.py  venue.py
sdk/src/trading_sdk/market_old/: load.py
sdk/src/trading_sdk/reporting/: __init__.py  history.py  report.py  types.py
sdk/src/trading_sdk/spot/: __init__.pyi  _spot.py
sdk/src/trading_sdk/streams/: __init__.py  depth.py  my_trades.py
sdk/src/trading_sdk/types/: __init__.pyi  exc.py  misc.py  networks.py
sdk/src/trading_sdk/util/: __init__.pyi  csv.py
sdk/src/trading_sdk/wallet/: __init__.py  __init__.pyi  _wallet.py  deposit_address.py  deposit_history.py  deposit_methods.py  withdraw.py  withdrawal_history.py  withdrawal_methods.py
sdk/src/tribulnation/sdk/: __init__.pyi
(+661 files in other folders)
