[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribulnation-sdk"
version = "1.0.0"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "An abstract, fully-typed, async Python SDK for automated crypto trading. By Tribulnation."
dependencies = [
  "lazy-loader", "typing-extensions",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.optional-dependencies]
mexc = ["mexc-trading-sdk"]
dydx = ["dydx-trading-sdk"]
hyperliquid = ["hyperliquid-trading-sdk"]

[project.urls]
Github = "https://github.com/tribulnation/sdk.git"
