[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribulnation-sdk"
version = "1.6.1"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "An abstract, fully-typed, async Python SDK for automated crypto trading. By Tribulnation."
dependencies = [
  "lazy-loader", "typing-extensions",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.optional-dependencies]
mexc = ["tribulnation-mexc"]
dydx = ["tribulnation-dydx"]
hyperliquid = ["tribulnation-hyperliquid"]
binance = ["tribulnation-binance"]
bitget = ["tribulnation-bitget"]
bit2me = ["tribulnation-bit2me"]
ethereum = ["tribulnation-ethereum"]
kraken = ["tribulnation-kraken"]
bybit = ["tribulnation-bybit"]
bingx = ["tribulnation-bingx"]

[project.urls]
Github = "https://github.com/tribulnation/sdk.git"
