[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribulnation-bingx"
version = "0.1.1"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "Tribulnation SDK implementation for BingX."
dependencies = [
  "tribulnation-sdk",
  "httpx"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
Repository = "https://github.com/tribulnation/sdk.git"
