[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bit2me-trading-sdk"
version = "0.1.0"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "Tribulnation SDK implementation for Bit2me."
dependencies = [
  "trading-sdk", "typed-bit2me"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/tribulnation/sdk.git"
