[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribulnation-bitget"
version = "0.3.1"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "Tribulnation SDK implementation for Bitget."
dependencies = [
  "tribulnation-sdk", "typed-bitget",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
Repository = "https://github.com/tribulnation/sdk.git"
