[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethereum-trading-sdk"
version = "0.1.11"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "Tribulnation SDK implementation for Ethereum."
dependencies = [
  "web3", "httpx", "pydantic", "typed-ethereum", "typed-alchemy", "typed-etherscan"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}
