[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribulnation-ethereum"
version = "0.2.0"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "Tribulnation SDK implementation for Ethereum."
dependencies = [
  "tribulnation-sdk>=1.1.0",
  "web3",
  "httpx",
  "pydantic",
  "typed-ethereum",
  "typed-alchemy",
  "typed-etherscan",
  "typed-moralis",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
Repository = "https://github.com/tribulnation/sdk.git"
