[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tribulnation-hyperliquid"
version = "0.1.0"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "Tribulnation SDK implementation for Hyperliquid."
dependencies = [
  "tribulnation-sdk", "typed-hyperliquid"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
Repository = "https://github.com/tribulnation/sdk.git"
